<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="enable_view_server"
        android:summary="@string/enable_view_server_summary"
        android:title="@string/enable_view_server_title" />

    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_bool_list_titles"
        android:entryValues="@array/pref_bool_list_values"
        android:key="ro.debuggable"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:summary="@string/default_value"
        android:title="ro.debuggable" />

    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_bool_list_titles"
        android:entryValues="@array/pref_bool_list_values"
        android:key="ro.secure"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:summary="@string/default_value"
        android:title="ro.secure" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="enable_debug"
        android:summary="@string/enable_debug_summary"
        android:title="@string/enable_debug_title" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="enable_debug_webview"
        android:summary="@string/enable_debug_webview_summary"
        android:title="@string/enable_debug_webview_title" />

    <Preference
        android:key="support"
        android:title="@string/support">

        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://github.com/jecelyin/buildprop" />

    </Preference>
</PreferenceScreen>
